# Project4_Search_Engine

./: .gitignore  AVLTree.h  CMakeLists.txt  DocParser.cpp  DocParser.h  README.md  indexHandler.cpp  indexHandler.h  main.cpp  queryEngine.cpp  queryEngine.h  userInterface.cpp  userInterface.h
